# potato

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: cli.rs  error.rs  lib.rs  main.rs  storage.rs
tests/: cli_tests.rs
tests/common/: mod.rs
